--- a/test.html.haml
+++ b/test.html.haml
@@ -35,6 +35,13 @@
       background: orange;
       height: 70%;
     }
+    .center_upper_imagebox{
+      background: #ff22a2;
+      width: 50%;
+      margin-left: 25%;
+      margin-top: 10%;
+      height: 50%;
+    }
     .center_mid{
       background: gray;
       height: 20%;
@@ -52,9 +59,15 @@
         .center_upper
           %h1
             center title
+          .center_upper_imagebox
+            %h1
+              imagebox
         .center_mid
           %h1
-            center mid 
+            center mid
+          .text_area
+            %h1
+              text area center mid div
         .center_footer
           %h1
             center footer
