replaced % to px for body

--- a/test.html.haml
+++ b/test.html.haml
@@ -1,21 +1,17 @@
 %html
   %body  
     :css
-      .body{
-        margin: 0px;
-        padding: 0px;
-        font-size: 1.3em;
-        height: 100%;
-      }
       h1, hr{
         padding: 0px;
         margin: 0px;
       }
       body{
-        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        font-size: 1.3em;
       }
       table{
-        height: 100%;
+        height: 700px;
         width: 100%;
       }
       td.left_main_table{
