--- a/test.html.haml
+++ b/test.html.haml
@@ -14,6 +14,9 @@
         height: 700px;
         width: 100%;
       }
+      table.footer_table{
+      height: 30px;
+      }
       td.left_main_table{
 
       }
@@ -56,10 +59,8 @@
         height: 35%;
       }
       .right{
-        float: right;
         height: 25%;
         background: red;
-        margin-top: 26.5%;
       }
       .left{
         float: left;
@@ -74,7 +75,6 @@
       }
       .center_footer{
         background: purple;
-        height: 10%;
       }
     %table
       %tr
