removed all colors and logo padding, hr width

--- a/test.html.haml
+++ b/test.html.haml
@@ -1,9 +1,13 @@
 %html
   %body  
     :css
-      h1, hr{
+      h1{
         padding: 0px;
         margin: 0px;
+      }
+      hr{
+        width: 95%;
+        color: black;
       }
       body{
         margin: 0px;
@@ -18,16 +22,20 @@
         height: 100px;
         background: transparent;
       }
+      span.logo_text{
+        
+      }
       img{
         height: 80px;
+      }
+      img#logo{
+        margin-top: 200px;
+        padding-right: 20px;
       }
       img.app_store{
         height: 30px;
       }
       img.play_store{
-        height: 30px;
-      }
-      table.footer_table{
         height: 30px;
       }
       table.center_upper_table{
@@ -37,45 +45,42 @@
 
       }
       td.center_main_table{
-
+        background: black;
       }
       td.right_main_table{
 
       }
       .left_container{
-        background: green;
         height: 130%;
       }
       .center_container{
         background: blue;
       }
       .right_container{
-        background: red;
         height: 130%;
       }
       .center_upper{
-        background: orange;
+
       }
       .center_mid{
-        background: gray;
+
         height: 35%;
       }
       .right{
         height: 25%;
-        background: red;
       }
       .left{
-        background: white;
+        padding: 30px;
       }
       .huge_text{
         font-size: 4em;
       }
       .text_area.larger{
-        font-size: 2em;
+        font-size: 1.6em;
         padding-top: 15px;
       }
       .center_footer{
-        background: purple;
+        padding-bottom: 50px;
       }
     %table
       %tr
@@ -88,7 +93,7 @@
             .center_upper
               %table.center_upper_table
                 %tr
-                  %td{:height => "700px"}
+                  %td{:height => "500px"}
                     .center_upper_imagebox
                       %h1
                         imagebox
@@ -107,9 +112,10 @@
                         To Book a cab  call 3355 3355
                       .text_area.larger
                         Use code Airport500
-                  %td     
-                    %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo"}
-                
+                  %td{:align => "center"}
+                    %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
+                    %span.logo_text
+                      Be independent
             %hr      
             .center_footer
               %table.footer_table
