--- a/test.html.haml
+++ b/test.html.haml
@@ -18,6 +18,9 @@
         width: 100%;
         border: 0px;
       }
+      table.footer_table{
+        text-align: center;
+      }
       table.text_logo_table{
         height: 100px;
         background: transparent;
@@ -87,7 +90,7 @@
         %td.left_main_table
           .left_container
             %h1
-              left title
+
         %td.center_main_table{:width => "900px"}
           .center_container
             .center_upper
@@ -113,7 +116,8 @@
                       .text_area.larger
                         Use code Airport500
                   %td{:align => "center"}
-                    %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
+                    %a{:href => "http://www.olacabs.com"}
+                      %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
                     %span.logo_text
                       Be independent
             %hr      
@@ -121,11 +125,9 @@
               %table.footer_table
                 %tr
                   %td
-                    Track your cab on app
-                    |
+                    Track your cab on app  |
                   %td
-                    Same cab fare 24X7
-                    |
+                    Same cab fare 24X7  |
                   %td
                     Download the app from
                   %td
@@ -135,5 +137,4 @@
         %td.right_main_table
           .right_container
             %h1
-              right title
 
