added non breaking spaces in footer

--- a/test.html.haml
+++ b/test.html.haml
@@ -125,9 +125,9 @@
               %table.footer_table
                 %tr
                   %td
-                    Track your cab on app  |
+                    Track your cab on app   	&nbsp;  &nbsp; 	&nbsp;|
                   %td
-                    Same cab fare 24X7  |
+                    Same cab fare 24X7 	        &nbsp; 	&nbsp; 	&nbsp;|
                   %td
                     Download the app from
                   %td
