added non breaking spaces in footer and links to apps

--- a/test.html.haml
+++ b/test.html.haml
@@ -131,9 +131,11 @@
                   %td
                     Download the app from
                   %td
-                    %img.play_store{:src => "google_play.jpg", :alt => "google play logo"}
+                    %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
+                      %img.play_store{:src => "google_play.jpg", :alt => "google play logo"}
                   %td
-                    %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
+                    %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
+                      %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
         %td.right_main_table
           .right_container
             %h1
