--- a/test.html.haml
+++ b/test.html.haml
@@ -6,8 +6,8 @@
         margin: 0px;
       }
       hr{
-        width: 95%;
-        color: black;
+        width: 90%;
+        margin-left: 40px;
       }
       body{
         margin: 0px;
@@ -20,6 +20,8 @@
       }
       table.footer_table{
         text-align: center;
+        width: 850px;
+        padding-left: 40px;
       }
       table.text_logo_table{
         height: 100px;
@@ -33,7 +35,7 @@
       }
       img#logo{
         margin-top: 200px;
-        padding-right: 20px;
+        padding-right: 60px;
       }
       img.app_store{
         height: 30px;
@@ -73,7 +75,7 @@
         height: 25%;
       }
       .left{
-        padding: 30px;
+        padding: 50px;
       }
       .huge_text{
         font-size: 4em;
@@ -124,16 +126,16 @@
             .center_footer
               %table.footer_table
                 %tr
-                  %td
-                    Track your cab on app   	&nbsp;  &nbsp; 	&nbsp;|
-                  %td
-                    Same cab fare 24X7 	        &nbsp; 	&nbsp; 	&nbsp;|
-                  %td
+                  %td{:width => "190px;"}
+                    Track your cab on app&nbsp;&nbsp;&nbsp;|
+                  %td{:width => "170px;"}
+                    Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
+                  %td{:width => "190px;"}
                     Download the app from
-                  %td
+                  %td{:width => "100px;"}
                     %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
                       %img.play_store{:src => "google_play.jpg", :alt => "google play logo"}
-                  %td
+                  %td{:width => "100px;"}
                     %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
                       %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
         %td.right_main_table
