color gradient added

--- a/test.html.haml
+++ b/test.html.haml
@@ -51,7 +51,7 @@
 
       }
       td.center_main_table{
-        background: black;
+
       }
       td.right_main_table{
 
@@ -60,7 +60,17 @@
         height: 130%;
       }
       .center_container{
-        background: #6CE51B;
+
+        background-image: -webkit-radial-gradient(50% 30%, 940px 840px, rgba(255, 255, 255, 255) 0%, rgb(108, 229, 27) 38%);
+
+
+        -# background-image: -webkit-gradient(radial, 114 40%, 0, 114 40%, 133, color-stop(0%, rgba(0, 229, 43, 0)), color-stop(38%, rgb(108, 229, 27)));
+
+
+        -# background-image: -ms-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
+        -# background-image: -o-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
+        -# background-image: radial-gradient(farthest-corner at 114px 40%, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
+        -# background-image: -moz-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
       }
       .right_container{
         height: 130%;
