radial gradients fixed

--- a/test.html.haml
+++ b/test.html.haml
@@ -51,7 +51,11 @@
 
       }
       td.center_main_table{
-
+        background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
       }
       td.right_main_table{
 
@@ -60,17 +64,11 @@
         height: 130%;
       }
       .center_container{
-
         background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-
-
-        -# background-image: -webkit-gradient(radial, 114 40%, 0, 114 40%, 133, color-stop(0%, rgba(0, 229, 43, 0)), color-stop(38%, rgb(108, 229, 27)));
-
-
-        -# background-image: -ms-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
-        -# background-image: -o-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
-        -# background-image: radial-gradient(farthest-corner at 114px 40%, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
-        -# background-image: -moz-radial-gradient(114px 40%, farthest-corner, rgba(0, 229, 43, 0) 0%, rgb(108, 229, 27) 38%);
+        background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
       }
       .right_container{
         height: 130%;
@@ -158,3 +156,4 @@
           .right_container
             %h1
 
+        -# background-image: -webkit-gradient(radial, 114 40%, 0, 114 40%, 133, color-stop(0%, rgba(0, 229, 43, 0)), color-stop(38%, rgb(108, 229, 27)));
