--- a/test.html.haml
+++ b/test.html.haml
@@ -51,11 +51,7 @@
 
       }
       td.center_main_table{
-        background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+
       }
       td.right_main_table{
 
@@ -112,29 +108,29 @@
                 %tr
                   %td{:height => "500px"}
                     .center_upper_imagebox
-                      %img.center_image{:src => "http://i2.listal.com/image/1632733/500full.jpg", :alt => "center logo image"}
+                      %img.center_image{:src => "image_path", :alt => "center logo image"}
             .center_mid
               %table.text_logo_table
                 %tr
                   %td{:width=> "900px"}
                     .left
                       .huge_text
-                        Airfare Up.
-                      .huge_text
                         Cab fare down.
+                      .huge_text
+                        Lorem Ipsum 
                       .text_area.larger
-                        Banglore airport transfer for only Rs.500/-
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
                       .text_area.larger
-                        To Book a cab  call 3355 3355
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
                       .text_area.larger
-                        Use code Airport500
+                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
                         
                   %td{:align => "center"}
                     .right
-                      %a{:href => "http://www.olacabs.com"}
-                        %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
+                      %a{:href => "http://www.google.com"}
+                        %img{:src => "image.png", :alt => "logo", :id => "logo"}
                       %span.logo_text
-                        Be independent
+                        
             %hr      
             .center_footer
               %table.footer_table
@@ -146,11 +142,11 @@
                   %td{:width => "190px;"}
                     Download the app from
                   %td{:width => "100px;"}
-                    %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
-                      %img.play_store{:src => "google_play.png", :alt => "google play logo"}
+                    %a{:href => "https://google.com"}
+                      %img.play_store{:src => "image.png", :alt => "google play logo"}
                   %td{:width => "100px;"}
-                    %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
-                      %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
+                    %a{:href => "http://google.com"}
+                      %img.app_store{:src => "image.png", :alt => "apple app store logo"}
 
         %td.right_main_table
           .right_container
