--- a/test.html.haml
+++ b/test.html.haml
@@ -136,11 +136,11 @@
               %table.footer_table
                 %tr
                   %td{:width => "190px;"}
-                    Track your cab on app&nbsp;&nbsp;&nbsp;|
+                    lorem ipsum app&nbsp;&nbsp;&nbsp;|
                   %td{:width => "170px;"}
-                    Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
+                    lorem ipsum 24X7&nbsp;&nbsp;&nbsp;|
                   %td{:width => "190px;"}
-                    Download the app from
+                    lorem ipsum
                   %td{:width => "100px;"}
                     %a{:href => "https://google.com"}
                       %img.play_store{:src => "image.png", :alt => "google play logo"}
