added normal background without gradient for ff

--- a/test.html.haml
+++ b/test.html.haml
@@ -60,6 +60,7 @@
         height: 130%;
       }
       .center_container{
+        background: rgb(152, 215, 43);
         background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
