added firefox gradient

--- a/test.html.haml
+++ b/test.html.haml
@@ -16,7 +16,9 @@
       }
       table{
         width: 100%;
-        border: 0px;
+      }
+      td{
+        border: solid;
       }
       table.footer_table{
         text-align: center;
@@ -27,58 +29,34 @@
         height: 100px;
         background: transparent;
       }
-      span.logo_text{
 
-      }
       img{
         height: 80px;
       }
-      img.center_image{
-        height: 350px;
-        max-height: 380px;
-        padding-left: 100px;
-      }
       img.app_store{
-        height: 30px;
+        max-height: 30px;
+        max-width: 130px;
       }
       img.play_store{
-        height: 30px;
-      }
-      table.center_upper_table{
-        
-      }
-      td.left_main_table{
-
+        max-height: 30px;
+        max-width: 130px;
       }
       td.center_main_table{
-        background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-      }
-      td.right_main_table{
-
-      }
-      .left_container{
-        height: 130%;
-      }
-      .center_container{
         background: rgb(152, 215, 43);
         background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
       }
-      .right_container{
-        height: 130%;
-      }
-      .center_upper{
-
-      }
-      .center_mid{
-
+      .center_container{
+        -# background: rgb(152, 215, 43);
+        -# background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        -# background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        -# background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        -# background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
+        -# background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
       }
       .right{
         margin-top: 200px;
@@ -97,8 +75,8 @@
       .center_footer{
         padding-bottom: 50px;
       }
-      .center_upper_imagebox{
-        padding-left: 100px;
+      td.imagebox{
+
       }
     %table
       %tr
@@ -111,9 +89,9 @@
             .center_upper
               %table.center_upper_table
                 %tr
-                  %td{:height => "500px"}
+                  %td.imagebox{:height => "500px"}
                     .center_upper_imagebox
-                      %img.center_image{:src => "http://i2.listal.com/image/1632733/500full.jpg", :alt => "center logo image"}
+                      %img.center_image{:src => "http://i2.listal.com/image/1632733/500full.jpg", :alt => "central image"}
             .center_mid
               %table.text_logo_table
                 %tr
@@ -129,7 +107,6 @@
                         To Book a cab  call 3355 3355
                       .text_area.larger
                         Use code Airport500
-                        
                   %td{:align => "center"}
                     .right
                       %a{:href => "http://www.olacabs.com"}
@@ -146,10 +123,10 @@
                     Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
                   %td{:width => "190px;"}
                     Download the app from
-                  %td{:width => "100px;"}
+                  %td
                     %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
                       %img.play_store{:src => "google_play.png", :alt => "google play logo"}
-                  %td{:width => "100px;"}
+                  %td
                     %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
                       %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
 
