--- a/test.html.haml
+++ b/test.html.haml
@@ -17,9 +17,6 @@
       table{
         width: 100%;
       }
-      td{
-        border: solid;
-      }
       table.footer_table{
         text-align: center;
         width: 850px;
@@ -50,14 +47,6 @@
         background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
       }
-      .center_container{
-        -# background: rgb(152, 215, 43);
-        -# background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-      }
       .right{
         margin-top: 200px;
         padding-right: 60px;
@@ -75,8 +64,10 @@
       .center_footer{
         padding-bottom: 50px;
       }
-      td.imagebox{
-
+      .center_upper_imagebox{
+        padding-left: 220px;
+        height: 240px;
+        max-height: 240px;
       }
     %table
       %tr
@@ -91,28 +82,30 @@
                 %tr
                   %td.imagebox{:height => "500px"}
                     .center_upper_imagebox
-                      %img.center_image{:src => "http://i2.listal.com/image/1632733/500full.jpg", :alt => "central image"}
+                      %img.center_image{:src => "<image link goes here>", :alt => "central image"}
             .center_mid
               %table.text_logo_table
-                %tr
-                  %td{:width=> "900px"}
-                    .left
-                      .huge_text
-                        Airfare Up.
-                      .huge_text
-                        Cab fare down.
-                      .text_area.larger
-                        Banglore airport transfer for only Rs.500/-
-                      .text_area.larger
-                        To Book a cab  call 3355 3355
-                      .text_area.larger
-                        Use code Airport500
-                  %td{:align => "center"}
-                    .right
-                      %a{:href => "http://www.olacabs.com"}
-                        %img{:src => "olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
-                      %span.logo_text
-                        Be independent
+                %col{:width => "1500"}
+                  %col{:width => "100"}
+                    %tr
+                      %td
+                        .left
+                          .huge_text
+                            Airfare Up.
+                          .huge_text
+                            Cab fare down.
+                          .text_area.larger
+                            Banglore airport transfer for only Rs.500/-
+                          .text_area.larger
+                            To Book a cab  call 3355 3355
+                          .text_area.larger
+                            Use code Airport500
+                      %td{:align => "center"}
+                        .right
+                          %a{:href => "http://www.olacabs.com"}
+                            %img{:src => "<image link goes here>", :alt => "Ola cabs logo", :id => "logo"}
+                          %span.logo_text
+                            Be independent
             %hr      
             .center_footer
               %table.footer_table
@@ -123,15 +116,13 @@
                     Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
                   %td{:width => "190px;"}
                     Download the app from
-                  %td
+                  %td{:cellpadding => "50px"}
                     %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
-                      %img.play_store{:src => "google_play.png", :alt => "google play logo"}
+                      %img.play_store{:src => "<image link goes here>", :alt => "google play logo"}
                   %td
                     %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
-                      %img.app_store{:src => "app_store.png", :alt => "apple app store logo"}
+                      %img.app_store{:src => "<image link goes here>", :alt => "apple app store logo"}
 
         %td.right_main_table
           .right_container
             %h1
-
-        -# background-image: -webkit-gradient(radial, 114 40%, 0, 114 40%, 133, color-stop(0%, rgba(0, 229, 43, 0)), color-stop(38%, rgb(108, 229, 27)));
